# syncSlide

./: .gitignore  LICENSE  index.html  package-lock.json  package.json  project plan.md  readme.md  toDo.md
backend/: app.py
config/: cleanup.sh  crontab  readme.md  syncSlide.conf  syncSlide.service  update.bat
js/: handlers.js
src/: audience.html  index.html  testslides.md
src/audience/: index.html
src/css/: style.css
src/demo/: 1-4.m4a  5.mkv  6.mkv  7-8.m4a  index.html  recording.json  subs.vtt
src/js/: audience.js  common.js  handlers.js  play.js  recording.js  server.js
src/play/: index.html  play.html  recording.json
src/stage/: index.html
src/stage2/: index.html
syncslide-websocket/: Cargo.toml  db.sqlite3-shm  db.sqlite3-wal
syncslide-websocket/migrations/: 20251108194223_users.up.sql  20251108233315_presentation.down.sql  20251108233315_presentation.up.sql  20251110162149_groups.down.sql  20251110162149_groups.up.sql
syncslide-websocket/src/: db.rs  main.rs
syncslide-websocket/templates/: audience.html  base.html  create.html  index.html  join.html  login.html  nav.html  presentations.html  stage.html  start.html
syncslide-websocket/templates/partial/: footer.html  head.html  header.html  nav.html
syncslide-websocket/templates/user/: add_user.html  change_pwd.html
websocket-server/: README.md  app.py  main.py  requirements.txt  run.ps1
websocket-server/templates/: audience.html  join.html  stage.html  start.html
